--- a/Web_Api/Views/Shared/_Layout.cshtml
+++ b/Web_Api/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                 var marker = new google.maps.Marker({position: alvl, map: map});
             }
         </script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUCypew-kaLPmsronnbCpzRlTN7czxLW8&callback=initMap"
+        <script src="https://maps.googleapis.com/maps/api/js?key=your_api_key&callback=initMap"
                 async defer></script>
 
         <hr />
